fix(ffprobe-number-format-exception): change deprecated method newInstance